# rinha-de-backend-2025-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  RELEASING.md  cliff.toml  docker-compose.yml  justfile  nginx-analysis.md  nginx.conf  perf-optimization-plan.md  perf.md  renovate.json  sonar-project.properties
.github/workflows/: cd.yaml  ci.yaml  docker.yaml  perf-tests.yaml
src/: config.rs  lib.rs  main.rs
src/adapters/web/: errors.rs  handlers.rs  mod.rs  payments_handler.rs  payments_purge_handler.rs  payments_summary_handler.rs  schema.rs
src/api/: errors.rs  handlers.rs  mod.rs  payments_handler.rs  payments_summary_handler.rs  schema.rs
src/domain/: health_status.rs  mod.rs  payment.rs  payment_processor.rs  payment_router.rs  queue.rs  repository.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: mod.rs  redis.rs  settings.rs
src/infrastructure/persistence/: mod.rs  redis_payment_processor_repository.rs  redis_payment_repository.rs
src/infrastructure/queue/: mod.rs  redis_payment_queue.rs
src/infrastructure/routing/: in_memory_payment_router.rs  mod.rs
src/infrastructure/workers/: health_check_worker.rs  mod.rs  payment_processor_worker.rs  processor_health_monitor_worker.rs
src/model/: internal.rs  mod.rs  payment_processor.rs
src/use_cases/: create_payment.rs  dto.rs  get_payment_summary.rs  health_check.rs  mod.rs  process_payment.rs  purge_payments.rs
src/workers/: health_check_worker.rs  mod.rs  payment_processor_worker.rs  payment_processors.rs
tests/: integration_tests.rs  test_containers.rs  test_create_payment_handler.rs  test_lib.rs  test_payment_processing_worker.rs  test_payment_processors_health_worker.rs  test_payments_purge_handler.rs  test_payments_summary_handler.rs  test_process_payment.rs  test_processor_health_monitor_worker.rs  test_redis_payment_queue.rs
tests/infra/: mod.rs  payment_processor_container.rs  redis_container.rs
tests/support/: mod.rs  payment_processor_container.rs  postgresql_container.rs  redis_container.rs
