[package]
name = "rinha-de-backend"
version = "0.1.0-snapshot"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
redis = { version = "0.25", features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.11"
testcontainers = { version = "0.24.0", features = ["http_wait"] }
rinha-de-backend = { path = "." }
